[package]
name = "micromanager"
version = "0.1.0"
authors = ["Luke Tebbs <luke.tebbs@digital.hmrc.gov.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2"
env_logger = "0.8.1"
reqwest = { version = "0.10.8", features = ["json"] }
rs-docker = "0.0.58"
serde = "1.0.117"
serde_json = "1.0.59"
structopt = "0.3.20"
termcolor = "1.1.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.7"
nix = "0.19.0"
